[gd_scene load_steps=51 format=3 uid="uid://d1yme2tfg8o5v"]

[ext_resource type="Texture2D" uid="uid://bq7my48kt3rx4" path="res://Assets/Characters/Soldier/Soldier with shadows/Soldier 2.png" id="2_3jjpu"]
[ext_resource type="Script" uid="uid://dbhx78ptci3gq" path="res://Script/Player/player.gd" id="2_wc0kd"]
[ext_resource type="Texture2D" uid="uid://cinaeeu7vwoji" path="res://Assets/level-bg.png" id="4_g1kss"]
[ext_resource type="Script" uid="uid://bj48fhgxdjx08" path="res://Script/Player/health_bar.gd" id="7_t4lsi"]
[ext_resource type="PackedScene" uid="uid://nbjb34rx2gns" path="res://Scene/Menu/Game_over.tscn" id="7_x13ln"]
[ext_resource type="AudioStream" uid="uid://ri6jwigrtl5k" path="res://Sounds/Death.wav" id="8_lc3e7"]
[ext_resource type="AudioStream" uid="uid://bkiv058rifq7l" path="res://Sounds/hurt_2-[AudioTrimmer.com].wav" id="9_2d8q0"]
[ext_resource type="PackedScene" uid="uid://d3bfendedojt6" path="res://Scene/Projectiles/fire_ball.tscn" id="9_mlot8"]
[ext_resource type="AudioStream" uid="uid://dpda20votubaa" path="res://Sounds/fireball.mp3" id="10_mbyjr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_803j5"]
atlas = ExtResource("2_3jjpu")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq7d3"]
atlas = ExtResource("2_3jjpu")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk0vm"]
atlas = ExtResource("2_3jjpu")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3loe"]
atlas = ExtResource("2_3jjpu")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnhmo"]
atlas = ExtResource("2_3jjpu")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hypn"]
atlas = ExtResource("2_3jjpu")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8voqi"]
atlas = ExtResource("2_3jjpu")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql21w"]
atlas = ExtResource("2_3jjpu")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5acub"]
atlas = ExtResource("2_3jjpu")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2b75"]
atlas = ExtResource("2_3jjpu")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ysk"]
atlas = ExtResource("2_3jjpu")
region = Rect2(400, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryi5"]
atlas = ExtResource("2_3jjpu")
region = Rect2(500, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3r5g"]
atlas = ExtResource("2_3jjpu")
region = Rect2(600, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvdyw"]
atlas = ExtResource("2_3jjpu")
region = Rect2(700, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0alb"]
atlas = ExtResource("2_3jjpu")
region = Rect2(800, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eolet"]
atlas = ExtResource("2_3jjpu")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvkae"]
atlas = ExtResource("2_3jjpu")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xts1"]
atlas = ExtResource("2_3jjpu")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lbpe"]
atlas = ExtResource("2_3jjpu")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir803"]
atlas = ExtResource("2_3jjpu")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_132ax"]
atlas = ExtResource("2_3jjpu")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0o7y"]
atlas = ExtResource("2_3jjpu")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyhjb"]
atlas = ExtResource("2_3jjpu")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqkkc"]
atlas = ExtResource("2_3jjpu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_od5en"]
atlas = ExtResource("2_3jjpu")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y26yn"]
atlas = ExtResource("2_3jjpu")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nu0v"]
atlas = ExtResource("2_3jjpu")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyp6g"]
atlas = ExtResource("2_3jjpu")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jxab"]
atlas = ExtResource("2_3jjpu")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_887to"]
atlas = ExtResource("2_3jjpu")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g601"]
atlas = ExtResource("2_3jjpu")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sls5j"]
atlas = ExtResource("2_3jjpu")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f34s"]
atlas = ExtResource("2_3jjpu")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwanq"]
atlas = ExtResource("2_3jjpu")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tisx"]
atlas = ExtResource("2_3jjpu")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_obpu2"]
atlas = ExtResource("2_3jjpu")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_85iy4"]
atlas = ExtResource("2_3jjpu")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_68fhg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_803j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq7d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk0vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3loe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnhmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hypn")
}],
"loop": false,
"name": &"attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8voqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql21w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5acub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2b75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ysk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3r5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvdyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0alb")
}],
"loop": true,
"name": &"attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eolet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvkae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xts1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lbpe")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir803")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_132ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0o7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyhjb")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqkkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od5en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y26yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nu0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyp6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jxab")
}],
"loop": true,
"name": &"idle_shadow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_887to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g601")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sls5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f34s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwanq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tisx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obpu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85iy4")
}],
"loop": true,
"name": &"walk_shadow",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_l6k2v"]
font_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqjvc"]
bg_color = Color(0, 0.027451, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_185bb"]
bg_color = Color(1, 0.254902, 0.196078, 1)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(245, 188)
collision_mask = 7
motion_mode = 1
floor_snap_length = 0.0
platform_floor_layers = 1
script = ExtResource("2_wc0kd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.2, 2.2)
sprite_frames = SubResource("SpriteFrames_68fhg")
animation = &"attack_1"
offset = Vector2(0, -5)

[node name="Level" type="Node2D" parent="."]
position = Vector2(-26, 8)

[node name="Control" type="Control" parent="Level"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Level/Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.025
offset_left = -3.0
offset_top = 1.0
offset_right = 11.0
offset_bottom = 13.0
texture = ExtResource("4_g1kss")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Level_label" type="Label" parent="Level/Control"]
layout_mode = 0
offset_left = -16.0
offset_top = -4.0
offset_right = 24.0
offset_bottom = 19.0
text = "0"
label_settings = SubResource("LabelSettings_l6k2v")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = 12.0
offset_right = 22.0
offset_bottom = 19.0
theme_override_styles/background = SubResource("StyleBoxFlat_aqjvc")
theme_override_styles/fill = SubResource("StyleBoxFlat_185bb")
max_value = 50.0
step = 0.001
show_percentage = false
script = ExtResource("7_t4lsi")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-770, -172)
scale = Vector2(1.39583, 0.490119)

[node name="DamageHitbox" type="CollisionPolygon2D" parent="Area2D"]
z_index = 1
position = Vector2(151.165, -401.943)
scale = Vector2(0.71642, 2.04032)
polygon = PackedVector2Array(568, 374, 568, 370, 570, 370, 570, 360, 570, 352, 570, 339, 564, 339, 563, 337, 561, 337, 561, 335, 548, 335, 548, 337, 546, 337, 546, 339, 544, 339, 544, 341.432, 546, 342, 546, 348, 544, 348, 544, 355, 548, 355, 548, 357, 552, 357, 552, 359, 548, 359, 548, 361, 546, 361, 546, 366, 548, 366, 548, 368, 550, 368, 550, 372, 552, 372, 552, 374)

[node name="CollisionHitbox" type="CollisionPolygon2D" parent="."]
position = Vector2(-770, -172)
scale = Vector2(1.39583, 0.490119)
polygon = PackedVector2Array(560, 335.803, 560, 355.951, 545, 355.951, 545, 335.803)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
process_callback = 0
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Invincibility" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hurted" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Zoom" type="Timer" parent="."]

[node name="fire_ball" parent="." instance=ExtResource("9_mlot8")]
visible = false
position = Vector2(195, -65)

[node name="spawn_fire_right" type="Marker2D" parent="."]
position = Vector2(46, -15)

[node name="spawn_fire_left" type="Marker2D" parent="."]
position = Vector2(-46, -9)

[node name="spawn_fire_up" type="Marker2D" parent="."]
position = Vector2(-1, -54)

[node name="spawn_fire_down" type="Marker2D" parent="."]
position = Vector2(-1, 31)

[node name="AttackCooldown" type="Timer" parent="."]

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="Game Over" parent="GameOver" instance=ExtResource("7_x13ln")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Death_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lc3e7")
bus = &"Sfx"

[node name="Hurt_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2d8q0")
volume_db = -3.28
bus = &"Sfx"

[node name="Fireball_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_mbyjr")
volume_db = -38.602
bus = &"Sfx"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Invincibility" to="." method="_on_invincibility_timeout"]
[connection signal="timeout" from="Hurted" to="." method="_on_hurted_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_timer_timeout"]
